# currency_convert

./: .pre-commit-config.yaml  README.md  alembic.ini  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
currency_convert/application/agency/commands/create/: command.py  handler.py
currency_convert/application/agency/commands/update/: command.py  handler.py
currency_convert/application/agency/queries/fetch_all/: command.py  handler.py
currency_convert/application/agency/queries/fetch_one/: handler.py  query.py
currency_convert/application/primitives/: command.py  query.py
currency_convert/core/app/abstractions/: command_handler.py  query_handler.py
currency_convert/core/app/agency/create/: command.py  create_command.py  create_handler.py  handler.py
currency_convert/core/app/agency/get_by_name/: handler.py  query.py
currency_convert/core/app/agency/update/: command.py  handler.py
currency_convert/core/app/rate/create/many/: __init__.py  command.py  handler.py
currency_convert/core/app/rate/create/rate/: command.py  handler.py
currency_convert/core/app/rate/create/rates/: command.py  handler.py
currency_convert/core/app/rate/create/single/: command.py  handler.py
currency_convert/core/domain/agency/: agency_repository.py  entity.py  errors.py
currency_convert/core/domain/currency/: code.py  entity.py
currency_convert/core/domain/rate/: entity.py  errors.py  rate_repository.py
currency_convert/core/domain/resources/: strings_error.py
currency_convert/core/domain/shared/: command.py  domain_event.py  entity.py  error.py  mixin.py  query.py  uuid_valueobject.py  value_object.py
currency_convert/core/domain/shared/adapter/: sql_alchemy_adapter.py
currency_convert/core/domain/shared/maybe/: __init__.py  maybe.py
currency_convert/core/domain/shared/option/: __init__.py  option.py
currency_convert/core/domain/shared/result/: __init__.py  result.py
currency_convert/core/domain/shared/returns/: __init__.py  returns.py
currency_convert/core/domain/shared/value_objects/: country.py  currency_code.py  money.py  uuidid.py  value_object.py
currency_convert/domain/agency/entities/: agency.py  interface.py
currency_convert/domain/agency/valueobjects/: __init__.py  currency.py  money.py  rate.py
currency_convert/domain/primitives/: entity.py  error.py  valueobject.py
currency_convert/infrastructure/: db.py  mapper.py
currency_convert/infrastructure/agency/: db.py  dto.py  mapper.py  memory.py  repository.py
currency_convert/infrastructure/alembic/: env.py
currency_convert/infrastructure/alembic/versions/: a05a99b7da08_first.py
currency_convert/infrastructure/memory/agency/: memory.py  sqlalchemy.py
currency_convert/infrastructure/update_strategies/ezb/: memory.py  real.py
currency_convert/presentation/: __main__.py  config.py  constants.py
currency_convert/presentation/converter/: dependencies.py  router.py  schemas.py
dbml/: currency_converter.dbml
tests/: conftest.py  data.py
tests/currency/: test_currency.py
tests/e2e/: test_command_create.py  test_command_update.py  test_query_all.py  test_query_one.py
tests/helper/: fake_repository.py
tests/integration_tests/: test_agency.py  test_create_agency_command.py  test_create_rate_command.py  test_create_rates_command.py  test_update_agency_command.py
tests/test_repositories/: fake_repository.py
tests/unittests/: test_currency.py  test_infra_agency_repo.py  test_money.py  test_rate.py
tests/unittests/entities/: test_entities.py
tests/unittests/entities/currency/: test_currency.py
tests/unittests/maybe/: test_maybe.py
tests/unittests/option/: test_option.py
tests/unittests/result/: test_result.py
tests/unittests/value_objects/currency_code/: test_currency_code.py
tests/unittests/value_objects/money/: test_money.py
tests/unittests/value_objects/uuidid/: test_uuidid.py
